--- a/lenox/tsconfig.json
+++ b/lenox/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "es2022",
     "module": "commonjs",
     "strict": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -16,8 +18,7 @@
       ]
     },
     "declaration": true,
-    "sourceMap": true,
-    "downlevelIteration": true
+    "sourceMap": true
   },
   "include": [
     "src/**/*"
