--- a/bots/lenox/package.json
+++ b/bots/lenox/package.json
@@ -13,23 +13,23 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "axios": "1.6.1",
-    "cheerio": "1.0.0-rc.3",
+    "@botpress/sdk": "^0.5.2",
     "@google-cloud/translate": "6.0.0",
+    "axios": "1.6.1",
+    "cheerio": "^1.0.0-rc.12",
     "i18n": "0.13.2",
-    "botpress/sdk": "0.5.2",  
-    "node-cache": "5.1.2"    
+    "node-cache": "5.1.2"
   },
   "devDependencies": {
     "@types/node": "18.11.17",
-    "typescript": "4.9.4",
     "eslint": "7.32.0",
-    "prettier": "2.3.2",
-    "nodemon": "2.0.7",
-    "ts-node": "9.1.1",
     "jest": "26.6.3",
-    "ts-jest": "26.5.6",    
-    "semver": "7.3.2"
+    "nodemon": "^3.0.1",
+    "prettier": "2.3.2",
+    "semver": "^7.5.4",
+    "ts-jest": "26.5.6",
+    "ts-node": "9.1.1",
+    "typescript": "4.9.4"
   },
   "jest": {
     "preset": "ts-jest",
