--- a/bots/lenox/package.json
+++ b/bots/lenox/package.json
@@ -2,21 +2,21 @@
   "name": "lenox-bot",
   "version": "1.0.0",
   "description": "An advanced Botpress chatbot with GPT integration and multilingual support",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc && node build.js",
-    "start": "node dist/index.js",
+    "start": "node index.js",
     "test": "jest",
-    "dev": "nodemon --watch 'src/**/*' --exec 'ts-node' src/index.ts",
-    "lint": "eslint 'src/**/*.{js,ts}'",
-    "format": "prettier --write 'src/**/*.{js,ts,json}'",
+    "dev": "nodemon --watch '*.js' --exec 'node' index.js",
+    "lint": "eslint '*.js'",
+    "format": "prettier --write '*.js'",
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@botpress/sdk": "^0.5.2",
-    "@google-cloud/translate": "6.0.0",
-    "axios": "1.6.1",
+    "@botpress/sdk": "^0.0.7",
+    "@google-cloud/translate": "^8.0.2",
+    "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
+    "google-gax": "^4.0.5",
     "i18n": "0.13.2",
     "node-cache": "5.1.2"
   },
@@ -26,13 +26,10 @@
     "jest": "26.6.3",
     "nodemon": "^3.0.1",
     "prettier": "2.3.2",
-    "semver": "^7.5.4",
-    "ts-jest": "26.5.6",
-    "ts-node": "9.1.1",
-    "typescript": "4.9.4"
+    "semver": "^7.5.4"
   },
   "jest": {
-    "preset": "ts-jest",
+    "preset": "jest",
     "testEnvironment": "node"
   },
   "license": "MIT"
