--- a/bots/lenox/package.json
+++ b/bots/lenox/package.json
@@ -12,13 +12,14 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@botpress/sdk": "^0.0.7",
+    "@botpress/sdk": "^0.5.2",
     "@google-cloud/translate": "^8.0.2",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "google-gax": "^4.0.5",
     "i18n": "0.13.2",
-    "node-cache": "5.1.2"
+    "node-cache": "^5.1.2",
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "@types/node": "18.11.17",
