--- a/bots/lenox/package.json
+++ b/bots/lenox/package.json
@@ -16,6 +16,7 @@
     "@google-cloud/translate": "^8.0.2",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "google-gax": "^4.0.5",
     "i18n": "0.13.2",
     "node-cache": "^5.1.2",
